# DevOps

./: .gitignore  Dockerfile  FuncA.cpp  FuncA.h  Makefile  Makefile.am  configure.ac  main.cpp  server.cpp
.github/workflows/: build.yml
app/debian/: control  files
debian/: autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  rules
debian/hyperbolic-series/usr/share/doc/hyperbolic-series/: copyright
tests/: test_funcA  test_funcA.cpp
